WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
64889
Codeblock doesn't visit cached structures in global resolve instructions
https://bugs.webkit.org/show_bug.cgi?id=64889
Summary
Codeblock doesn't visit cached structures in global resolve instructions
Oliver Hunt
Reported
2011-07-20 13:18:02 PDT
Codeblock doesn't visit cached structures in global resolve instructions
Attachments
Patch
(1.61 KB, patch)
2011-07-20 13:18 PDT
,
Oliver Hunt
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Oliver Hunt
Comment 1
2011-07-20 13:18:43 PDT
Created
attachment 101500
[details]
Patch
Sam Weinig
Comment 2
2011-07-20 13:23:10 PDT
Comment on
attachment 101500
[details]
Patch Please note in the ChangeLog what test is being fixed by this, if you can.
Oliver Hunt
Comment 3
2011-07-20 13:25:28 PDT
Committed
r91394
: <
http://trac.webkit.org/changeset/91394
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug