Codeblock doesn't visit cached structures in global resolve instructions https://bugs.webkit.org/show_bug.cgi?id=64889

Reviewed by Sam Weinig.

Visit the global resolve instructions.  This fixes a couple
of random crashes seen in the jquery tests when using the
interpreter.

* bytecode/CodeBlock.cpp:
(JSC::CodeBlock::visitAggregate):

Canonical link: https://commits.webkit.org/80627@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@91394 268f45cc-cd09-0410-ab3c-d52691b4dbfc